refactored styles for About Me cards

--- a/app/assets/styles/modules/_subsection.css
+++ b/app/assets/styles/modules/_subsection.css
@@ -26,6 +26,10 @@
     margin-top: 1rem;
   }
 
+  &--about {
+    margin-top: calc(4rem + 80px);
+  }
+
   &--divider::before {
     content: "";
     position: relative;
