--- a/app/assets/styles/modules/_flex-row.css
+++ b/app/assets/styles/modules/_flex-row.css
@@ -2,13 +2,28 @@
   position: relative;
   display: flex;
   flex-flow: row wrap;
-  justify-content: center;
-  align-items: flex-start;
   @mixin atMedium {
   }
-  
+
+  &--center {
+    justify-content: center;
+  }
+
+  &--space-between {
+    justify-content: space-between;
+  }
+
   &--align-center {
     align-items: center;
+  }
+
+  &--gutters {
+    margin-right: -45px;
+  }
+
+  &--gutters > div {
+    flex: 1 1 33.3%;
+    padding-right: 65px;
   }
 
   &__item-half {
@@ -45,7 +60,12 @@
 
   &__item--4 {
     flex: 0 0 33.3%;
-    margin-top: 2rem;
+    /* margin-top: 2rem; */
+  }
+
+  &__item--third {
+    flex: 0 0 380px;
+    /* margin-top: 2rem; */
   }
 
   &__item--full {
