--- a/assets/styles/modules/_site-header.css
+++ b/assets/styles/modules/_site-header.css
@@ -1,6 +1,6 @@
 .site-header {
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   width: 100vw;
   padding: 15px 0;
   @mixin atMedium {
@@ -20,6 +20,8 @@
     padding: 0 15px;
     line-height: 1.75em;
     @mixin atMedium {
+      display: flex;
+      justify-content: flex-end;
     }
   }
 
