finalized header and hero section styles for all screen sizes

--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -39,16 +39,16 @@
   &__text-content {
     position: absolute;
     top: 25%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 368px;
+    border-radius: 50%;
     text-align: center;
     letter-spacing: 0.2em;
     text-transform: uppercase;
     z-index: 1;
-    @mixin atMedium {
+    @mixin atSmall {
       top: 33%;
-      left: 50%;
-      transform: translateX(-50%);
-      max-width: 400px;
-      border-radius: 50%;
     }
   }
 
@@ -64,7 +64,6 @@
     opacity: 1;
     transform: scale(1);
     transition: transform 0.5s ease, opacity 0.5s ease;
-
     @mixin atSmall {
       font-size: 2.75rem;
     }
@@ -94,13 +93,12 @@
   &__description {
     max-width: 20rem;
     line-height: 1.75rem;
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 300;
     color: #fff;
     text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.1);
     opacity: 1;
     transition: opacity 1250ms ease-in-out 1250ms;
-
     @mixin atSmall {
       font-size: 1.25rem;
     }
