--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -1,23 +1,21 @@
 .primary-nav {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   @mixin atMedium {
     margin-right: 1.5rem;
-    padding: 0;
   }
 
   ul {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0;
     margin: 0;
+    padding: 0;
+    justify-content: space-between;
+    @mixin atSmall {
+      justify-content: center;
+    }
   }
 
   li {
     list-style-type: none;
-    @mixin atMedium {
+    @mixin atSmall {
       margin: 0 1rem;
     }
   }
@@ -26,14 +24,13 @@
     position: relative;
     font-size: 0.9rem;
     letter-spacing: 0.2em;
-    font-weight: 500;
+    font-weight: 300;
     color: #fff;
     text-transform: uppercase;
     text-decoration: none;
     text-shadow: rgba(0, 0, 0, 0.1) 2px 2px 0px;
-    @mixin atMedium {
+    @mixin atSmall {
       font-size: 1rem;
-      font-weight: 300;
     }
   }
 
