moved inline SVG section divider into CSS pseudo-element; adjusted mobile styles for highlights section

--- a/app/assets/styles/modules/_feature.css
+++ b/app/assets/styles/modules/_feature.css
@@ -1,6 +1,9 @@
 .feature {
-  padding: 14px 26px;
+  margin: 20px 0;
   transition: box-shadow 450ms, opacity 450ms;
+  @mixin atSmall {
+    padding: 14px 26px;
+  }
 
   &:hover,
   &.is-active {
