--- a/app/assets/styles/modules/_frame.css
+++ b/app/assets/styles/modules/_frame.css
@@ -2,11 +2,13 @@
   background: transparent;
   box-shadow: rgba(46, 46, 61, 0.24) 0px 24px 64px 0px;
   
-  &--padded {
-    padding: 20px;
+  &--image {
+    @mixin atSmall {
+      padding: 20px;
+    }
   }
 
-  &--extra-padded {
+  &--text {
     padding: 20px 30px;
   }
 }
