--- a/app/assets/styles/modules/_subsection.css
+++ b/app/assets/styles/modules/_subsection.css
@@ -1,5 +1,5 @@
 .subsection {
-  margin-top: 4rem;
+  margin-top: 5rem;
   margin-bottom: 5rem;
 
   &--narrow {
@@ -27,7 +27,7 @@
   }
 
   &--divider::before {
-    content: "";
+    content: '';
     position: relative;
     top: 0;
     left: 0;
