--- a/assets/styles/modules/_feature.css
+++ b/assets/styles/modules/_feature.css
@@ -1,17 +1,15 @@
 .feature {
-  margin: 20px 0;
   transition: box-shadow 450ms, opacity 450ms;
   @mixin atSmall {
     padding: 14px 26px;
-  }
+    &:hover,
+    &.is-active {
+      box-shadow: rgba(46, 46, 61, 0.24) 0px 24px 64px 0px;
+    }
 
-  &:hover,
-  &.is-active {
-    box-shadow: rgba(46, 46, 61, 0.24) 0px 24px 64px 0px;
-  }
-
-  &.is-inactive {
-    opacity: 0.5;
+    &.is-inactive {
+      opacity: 0.5;
+    }
   }
 
   &__item {
@@ -37,7 +35,7 @@
     height: 2.5em;
     color: $mainOrange;
     stroke-width: 1.5;
-    stroke-linecap: round; 
+    stroke-linecap: round;
     stroke-linejoin: round;
     stroke: currentColor;
     fill: none;
@@ -45,12 +43,14 @@
 
   &__title {
     font-size: 1.125rem;
+    line-height: 1.5;
     font-weight: 600;
     text-align: left;
     margin: 0 0 0.4em 0;
     color: $mainGrey;
     @mixin atSmall {
       font-size: 1.375rem;
+      line-height: 1.25;
     }
   }
 }
