--- a/assets/styles/modules/_icon-list.css
+++ b/assets/styles/modules/_icon-list.css
@@ -1,5 +1,4 @@
 .icon-list {
-  margin: 0;
   padding: 0;
   list-style: none;
   text-decoration: none;
@@ -8,7 +7,7 @@
 
   &__icon {
     display: inline-block;
-    margin: 0 15px;
+    margin: 0 1rem;
     width: 4rem;
     height: 4rem;
     stroke-width: 0;
@@ -32,7 +31,7 @@
   }
 
   &__icon--small {
-    margin: 0 15px;
+    margin: 0.5rem 1rem 0 1rem;
     width: 3.5rem;
     height: 3.5rem;
   }
