--- a/assets/styles/modules/_subsection.css
+++ b/assets/styles/modules/_subsection.css
@@ -1,6 +1,6 @@
 .subsection {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
 
   &--narrow {
     @mixin atMedium {
@@ -19,7 +19,12 @@
   }
 
   &--inline {
-    margin-top: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+  
+  &--last {
+    margin-bottom: 0;
   }
 
   &--about {
@@ -28,17 +33,16 @@
 
   &--divider::before {
     content: '';
+    display: block;
     position: relative;
     top: 0;
     left: 0;
-    display: block;
+    margin-bottom: 4rem;
     width: 100%;
     height: 1px;
-    margin-bottom: 5rem;
     background: #e2e2e9;
-  }
-
-  &--last {
-    margin-bottom: 0;
+    @mixin atSmall {
+      margin-bottom: 5rem;
+    }
   }
 }
