--- a/assets/styles/base/_mixins.css
+++ b/assets/styles/base/_mixins.css
@@ -1,3 +1,9 @@
+@define-mixin atExtraSmall {
+    @media (min-width: 576px) {
+        @mixin-content;
+    }
+}
+
 @define-mixin atSmall {
     @media (min-width: 768px) {
         @mixin-content;
