--- a/assets/styles/modules/_page-section.css
+++ b/assets/styles/modules/_page-section.css
@@ -6,37 +6,65 @@
   }
 
   &--projects::after {
-    content: '';
-    display: block;
-    position: absolute;
-    top: calc(100% - 20px);
-    left: 0;
-    width: 100%;
-    height: 500px;
-    overflow: hidden;
-    line-height: 0;
-    background-image: url('/assets/shapes/section-divider.svg');
-    background-size: 100% 500px;
-    background-repeat: no-repeat;
-    transform: rotate(180deg);
-    z-index: 1;
+    @mixin atSmall {
+      content: '';
+      display: block;
+      position: absolute;
+      top: calc(100% - 20px);
+      left: 0;
+      width: 100%;
+      height: 380px;
+      overflow: hidden;
+      line-height: 0;
+      background-image: url('/assets/shapes/section-divider.svg');
+      background-size: 100% 380px;
+      background-repeat: no-repeat;
+      transform: rotate(180deg);
+      z-index: 1;
+    }
+    @mixin atLarge {
+      height: 500px;
+      background-size: 100% 500px;
+    }
   }
 
   &--about {
-    @mixin atMedium {
-      color: #ffffff;
-      padding-bottom: 0;
-      background-color: $secondaryGrey;
+    padding-bottom: 0;
+    color: #ffffff;
+    background-color: $secondaryGrey;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0.3),
+        rgba(0, 0, 0, 0.7)
+      ),
+      url('/assets/images/high-contrast-mountain-mobile.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    @mixin atSmall {
       background-image: linear-gradient(
           to bottom,
           rgba(0, 0, 0, 0.3),
           rgba(0, 0, 0, 0.7)
         ),
-        url('/assets/images/high-contrast-mountain.jpg');
-      background-position: center;
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
+        url('/assets/images/high-contrast-mountain-tablet-portrait.jpg');
+    }
+    @mixin atMedium {
+      background-image: linear-gradient(
+          to bottom,
+          rgba(0, 0, 0, 0.3),
+          rgba(0, 0, 0, 0.7)
+        ),
+        url('/assets/images/high-contrast-mountain-tablet-landscape.jpg');
+    }
+    @mixin atLarge {
+      background-image: linear-gradient(
+          to bottom,
+          rgba(0, 0, 0, 0.3),
+          rgba(0, 0, 0, 0.7)
+        ),
+        url('/assets/images/high-contrast-mountain-desktop.jpg');
     }
   }
 }
