--- a/assets/styles/modules/_testimonial.css
+++ b/assets/styles/modules/_testimonial.css
@@ -25,6 +25,7 @@
     height: 160px;
     border: 6px solid rgba(255, 255, 255);
     border-radius: 80px;
+    box-shadow: rgba(46, 46, 61, 0.24) 0px 2px 6px 0px;
     background-color: rgba(255, 255, 255);
     overflow: hidden;
   }
@@ -35,7 +36,7 @@
 
   &__title {
     text-align: center;
-    margin: 0.5rem 0 0 0;
+    margin: 0.75rem 0 0 0;
     font-size: 1.5rem;
     font-weight: 500;
     color: $mainGrey;
