--- a/assets/styles/modules/_page-section.css
+++ b/assets/styles/modules/_page-section.css
@@ -31,17 +31,16 @@
   &--about {
     padding-bottom: 0;
     color: #ffffff;
-    background-color: $secondaryGrey;
-    background-image: linear-gradient(
+    background-color: $mainGrey;
+    /* background-image: linear-gradient(
         to bottom,
         rgba(0, 0, 0, 0.3),
         rgba(0, 0, 0, 0.7)
       ),
-      url('/assets/images/high-contrast-mountain-mobile.jpg');
+      url('/assets/images/high-contrast-mountain-mobile.jpg'); */
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
     @mixin atSmall {
       background-image: linear-gradient(
           to bottom,
@@ -49,6 +48,7 @@
           rgba(0, 0, 0, 0.7)
         ),
         url('/assets/images/high-contrast-mountain-tablet-portrait.jpg');
+      background-attachment: fixed;
     }
     @mixin atMedium {
       background-image: linear-gradient(
