--- a/assets/styles/modules/_button.css
+++ b/assets/styles/modules/_button.css
@@ -30,8 +30,11 @@
   }
 
   &--round {
-    padding: 2rem;
     border-radius: 50%;
+    padding: 1.5rem;
+    @mixin atSmall {
+      padding: 2rem;
+    }
   }
 
   &__icon {
@@ -40,9 +43,13 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 2rem;
-    height: 2rem;
+    width: 1.5rem;
+    height: 1.5rem;
     stroke-width: 0;
     fill: currentColor;
+    @mixin atSmall {      
+      width: 2rem;
+      height: 2rem;
+    }
   }
 }
