--- a/assets/styles/modules/_generic-content-container.css
+++ b/assets/styles/modules/_generic-content-container.css
@@ -26,6 +26,8 @@
   }
 
   &--overlay {
-    text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.1);
+    @mixin atSmall{
+      text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.1);
+    }
   }
 }
