--- a/assets/styles/modules/_site-footer.css
+++ b/assets/styles/modules/_site-footer.css
@@ -1,14 +1,7 @@
 .site-footer {
-  margin: 0 auto;
-  padding: 2rem 0;
-  border-top: 1px solid #e2e2e9;
-  line-height: 1.5rem;
-  font-family: "Open Sans", Helvetica, sans-serif;
-  font-weight: 300;
-  letter-spacing: 0.2em;
-  text-align: center;
-  text-transform: uppercase;
-  color: #fff;
-  @mixin atMedium {
+  overflow: auto;
+  background-color: $mainGrey;
+  @mixin atSmall {
+    background-color: initial;
   }
 }
