--- a/assets/styles/modules/_subsection.css
+++ b/assets/styles/modules/_subsection.css
@@ -22,13 +22,22 @@
     margin-top: 2rem;
     margin-bottom: 2rem;
   }
-  
+
   &--last {
     margin-bottom: 0;
   }
 
   &--about {
     margin-top: calc(4rem + 80px);
+  }
+
+  &--footer {
+    padding-top: 2rem;
+    margin-top: 0;
+    background-color: $mainGrey;
+    @mixin atSmall {
+      background-color: initial;
+    }
   }
 
   &--divider::before {
