--- a/assets/styles/modules/_wrapper.css
+++ b/assets/styles/modules/_wrapper.css
@@ -11,7 +11,7 @@
 
   &--about {
     max-width: 1334px;
-    @atmixin atSmall {
+    @mixin atSmall {
       padding-left: 45px;
       padding-right: 45px;
     }
