--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -5,6 +5,7 @@
 @import "modules/_large-hero";   
 @import "modules/_wrapper";
 @import "modules/_button";
+@import "modules/_copyright";
 @import "modules/_devices-scaled";
 @import "modules/_page-section";
 @import "modules/_frame";
