--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -30,8 +30,7 @@
 
   &--about {
     padding-bottom: 0;
-    color: #ffffff;
-    background-color: $mainGrey;
+    background-color: $lightBlue;
     /* background-image: linear-gradient(
         to bottom,
         rgba(0, 0, 0, 0.3),
