--- a/assets/styles/modules/_site-header.css
+++ b/assets/styles/modules/_site-header.css
@@ -1,13 +1,14 @@
 .site-header {
   position: fixed;
   z-index: 10;
-  width: 100vw;
-  padding: 15px 0;
-  @mixin atMedium {
+  width: 100%;
+  padding: 10px 0;
+  @mixin atLarge {
+    padding: 15px 0;
   }
 
   &--is-translucent {
-    background-color: rgba($mainGrey, 0.75);
+    background-color: rgba($mainGrey, 0.85);
   }
 
   &__logo {
@@ -17,11 +18,11 @@
 
   &__menu-content {
     position: relative;
-    padding: 0 24px;
+    padding: 0 18px;
     line-height: 1.75em;
     @mixin atMedium {
       display: flex;
-      justify-content: flex-end;
+      justify-content: flex-start;
     }
   }
 
