changed primary-nav position

--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -19,7 +19,7 @@
     text-transform: uppercase;
     text-decoration: none;
     text-shadow: rgba(0, 0, 0, 0.1) 2px 2px 0px;
-    @mixin atSmall {
+    @mixin atExtraSmall {
       font-size: 1rem;
       letter-spacing: 0.2em;
     }
