refactored iphone-x class names using BEM and prefixed flex-row class name with l-

--- a/app/assets/styles/modules/_copyright.css
+++ b/app/assets/styles/modules/_copyright.css
@@ -1,6 +1,4 @@
 .copyright {
-  width: 100%;
-  margin: 0 auto;
   padding: 2rem 0;
   line-height: 1.5rem;
   font-family: 'Open Sans', Helvetica, sans-serif;
@@ -10,7 +8,7 @@
   text-transform: uppercase;
   color: #fff;
   @mixin atSmall {
-    margin-top: 4rem;
+    /* margin-top: 4rem; */
     border-top: 1px solid #e2e2e9;
   }
 }
