--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -6,7 +6,7 @@
 @import "modules/_wrapper";
 @import "modules/_button";
 @import "modules/_copyright";
-@import "modules/_devices-scaled";
+@import "modules/_iphone-x";
 @import "modules/_page-section";
 @import "modules/_frame";
 @import "modules/_flex-row";
