--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,14 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   scroll-behavior: smooth;
 }
 
 body {
-  font-family: "Open Sans", "Roboto", Helvetica, sans-serif;
+  font-family: 'Open Sans', 'Roboto', Helvetica, sans-serif;
   color: $secondaryGrey;
-}
-
-* {
-  box-sizing: border-box;
 }
 
 h1,
@@ -17,7 +17,17 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Open Sans", Helvetica, sans-serif;
+  font-family: 'Open Sans', 'Roboto', Helvetica, sans-serif;
+  color: $mainGrey;
+}
+
+p {
+  margin: 0.2em 0;
+  line-height: 1.625;
+  font-weight: 400;
+  @mixin atSmall {
+    font-size: 1.125rem;
+  }
 }
 
 a {
