--- a/app/assets/styles/modules/_l-flex-column.css
+++ b/app/assets/styles/modules/_l-flex-column.css
@@ -1,10 +1,6 @@
-.flex-column {
+.l-flex-column {
   position: relative;
   display: flex;
   flex-flow: column nowrap;
-  justify-content: space-between;
   align-items: center;
-  @mixin atMedium {
-  }
-
 }
