--- a/app/assets/styles/modules/_testimonial.css
+++ b/app/assets/styles/modules/_testimonial.css
@@ -2,6 +2,7 @@
   position: relative;
   height: 100%;
   padding: 80px 18px 120px 18px;
+  text-align: center;
   /* background-color: $lightBlue; */
   /* color: rgba(255, 255, 255, 0.8); */
   @mixin atSmall {
