--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -11,13 +11,14 @@
 @import "modules/_frame";
 @import "modules/_l-flex-row";
 @import "modules/_l-flex-column";
+@import "modules/_l-split-column";
 @import "modules/_generic-content-container";
 @import "modules/_section-title";
 @import "modules/_subsection";
 @import "modules/_subsection-title";
 @import "modules/_subsection-subtitle";
 @import "modules/_link";
-@import "modules/_icon-list";
+@import "modules/_tech-icon";
 @import "modules/_feature";
 @import "modules/_testimonial";
 @import "modules/_site-footer";
