--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -2,7 +2,7 @@
 @import "base/_variables";
 @import "base/_mixins";
 @import "base/_global";
-@import "modules/_large-hero";   
+@import "modules/_hero";   
 @import "modules/_wrapper";
 @import "modules/_button";
 @import "modules/_copyright";
