changed l-flex-row__item to keep 100% flex-basis until medium instead of small and adjusted other styles accordingly; removed modifier in wrapper block

--- a/app/assets/styles/modules/_feature.css
+++ b/app/assets/styles/modules/_feature.css
@@ -1,6 +1,6 @@
 .feature {
   transition: box-shadow 300ms, opacity 300ms;
-  @mixin atSmall {
+  @mixin atMedium {
     padding: 14px 26px;
     &:hover,
     &.is-active {
