--- a/app/assets/styles/modules/_l-flex-row.css
+++ b/app/assets/styles/modules/_l-flex-row.css
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   flex-flow: row wrap;
-  align-content: center;
+  justify-content: center;
 
   &--align-center {
     align-items: center;
@@ -13,7 +13,6 @@
   }
 
   &--type-margin-sides-large {
-    justify-content: center;
     & > * {
       margin-left: 1rem;
       margin-right: 1rem;
@@ -25,7 +24,6 @@
   }
 
   &--type-margin-sides-small {
-    justify-content: center;
     & > * {
       margin-left: 1rem;
       margin-right: 1rem;
@@ -50,6 +48,7 @@
 
   &__item {
     margin-top: 2rem;
+    max-width: 700px;
     flex: 1 1 100%;
     @mixin atSmall {
       margin-top: 1.75rem;
@@ -60,21 +59,21 @@
     margin-top: 0;
   }
 
-  &__item--margin-top-none-after-small {
-    @mixin atSmall {
+  &__item--margin-top-none-after-medium {
+    @mixin atMedium {
       margin-top: 0;
-    }
-  }
-
-  &__item--size-6-after-small {
-    @mixin atSmall {
-      flex-basis: 50%;
     }
   }
 
   &__item--size-4-after-medium {
     @mixin atLarge {
       flex-basis: 33.3%;
+    }
+  }
+
+  &__item--size-6-after-medium {
+    @mixin atMedium {
+      flex-basis: 50%;
     }
   }
 
