added new variable for max-width; refactored About cards with wrapper and l-flex-column

--- a/app/assets/styles/modules/_frame.css
+++ b/app/assets/styles/modules/_frame.css
@@ -9,7 +9,7 @@
   }
 
   &--content-text {
-    max-width: 700px;
+    max-width: $textWidth;
     padding: 20px 30px;
     text-align: center;
   }
