--- a/app/assets/styles/modules/_site-footer.css
+++ b/app/assets/styles/modules/_site-footer.css
@@ -1,7 +1,9 @@
 .site-footer {
+  width: 100%;
   padding-top: 2rem;
   background-color: $mainGrey;
   @mixin atSmall {
+    padding-top: 0;
     background-color: initial;
   }
 }
