--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,24 +1,24 @@
-@import "normalize.css";
-@import "base/_variables";
-@import "base/_mixins";
-@import "base/_global";
-@import "modules/_hero";   
-@import "modules/_wrapper";
-@import "modules/_button";
-@import "modules/_copyright";
-@import "modules/_iphone-x";
-@import "modules/_page-section";
-@import "modules/_frame";
-@import "modules/_l-flex-row";
-@import "modules/_l-flex-column";
-@import "modules/_l-split-column";
-@import "modules/_subsection";
-@import "modules/_subsection-title";
-@import "modules/_subsection-subtitle";
-@import "modules/_link";
-@import "modules/_tech-icon";
-@import "modules/_feature";
-@import "modules/_testimonial";
-@import "modules/_site-footer";
-@import "modules/_site-header";
-@import "modules/_primary-nav";
+@import 'normalize.css';
+@import 'base/_variables';
+@import 'base/_mixins';
+@import 'base/_global';
+@import 'modules/_hero';
+@import 'modules/_wrapper';
+@import 'modules/_button';
+@import 'modules/_copyright';
+@import 'modules/_iphone-x';
+@import 'modules/_page-section';
+@import 'modules/_frame';
+@import 'modules/_l-flex-row';
+@import 'modules/_l-flex-column';
+@import 'modules/_l-split-column';
+@import 'modules/_subsection';
+@import 'modules/_project-intro';
+@import 'modules/_subsection-subtitle';
+@import 'modules/_link';
+@import 'modules/_tech-icon';
+@import 'modules/_feature';
+@import 'modules/_testimonial';
+@import 'modules/_site-footer';
+@import 'modules/_site-header';
+@import 'modules/_primary-nav';
