--- a/app/assets/styles/modules/_testimonial.css
+++ b/app/assets/styles/modules/_testimonial.css
@@ -2,13 +2,10 @@
   position: relative;
   padding: 80px 18px 120px 18px;
   text-align: center;
-  /* background-color: $lightBlue; */
-  /* color: rgba(255, 255, 255, 0.8); */
   @mixin atSmall {
     padding: 80px 60px 120px 60px;
     background-color: rgb(255, 255, 255);
     background-color: rgba(255, 255, 255, 0.9);
-    color: $secondaryGrey;
   }
   @mixin atMedium {
     padding: 80px 1.8125rem 1.125rem 1.8125rem;
@@ -21,14 +18,7 @@
     }
   }
 
-  /* &--b-margin-until-extra-small {
-    margin-bottom: 100px;
-    @mixin atExtraSmall {
-      margin-bottom: 0px;
-    }
-  } */
-
-  &__profile-picture {
+  &__image-frame {
     position: absolute;
     left: 50%;
     transform: translate(-50%, -100%);
@@ -41,25 +31,23 @@
     overflow: hidden;
   }
 
-  &__profile-picture img {
+  &__image-frame img {
     width: 100%;
   }
 
   &__title {
-    text-align: center;
     margin: 0.75rem 0 0 0;
     font-size: 1.5rem;
-    font-weight: 500;
+    font-weight: 600;
+    text-align: center;
     color: $mainGrey;
-    @mixin atSmall {
-    }
   }
 
   &__subtitle {
-    text-align: center;
     margin: 0.25rem 0 0.5rem 0;
     font-size: 0.9375rem;
     font-weight: 400;
+    text-align: center;
     color: $mainOrange;
   }
 }
