renamed testimonial block to skill and moved all layout blocks to the layout folder

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,23 +1,23 @@
 @import 'normalize.css';
-@import 'base/_variables';
 @import 'base/_mixins';
+@import 'base/_variables';
 @import 'base/_global';
-@import 'modules/_hero';
-@import 'modules/_wrapper';
+@import 'layout/_l-flex-column';
+@import 'layout/_l-flex-row';
+@import 'layout/_l-split-column';
+@import 'layout/_l-wrapper';
 @import 'modules/_button';
 @import 'modules/_copyright';
-@import 'modules/_iphone-x';
-@import 'modules/_page-section';
-@import 'modules/_frame';
-@import 'modules/_l-flex-row';
-@import 'modules/_l-flex-column';
-@import 'modules/_l-split-column';
-@import 'modules/_project-intro';
-@import 'modules/_subheading';
-@import 'modules/_link';
-@import 'modules/_tech-icon';
 @import 'modules/_feature';
-@import 'modules/_testimonial';
+@import 'modules/_frame';
+@import 'modules/_hero';
+@import 'modules/_iphone-x';
+@import 'modules/_link';
+@import 'modules/_page-section';
+@import 'modules/_primary-nav';
+@import 'modules/_project-intro';
 @import 'modules/_site-footer';
 @import 'modules/_site-header';
-@import 'modules/_primary-nav';
+@import 'modules/_skill';
+@import 'modules/_subheading';
+@import 'modules/_tech-icon';
