changed all links to open in new tab; edited all class attributes in HTML for consistency

--- a/app/assets/styles/layout/_l-flex-column.css
+++ b/app/assets/styles/layout/_l-flex-column.css
@@ -27,7 +27,7 @@
     margin-top: 2rem;
   }
 
-  &--gutters--extra-small > * + * {
+  &--gutters-extra-small > * + * {
     margin-top: 1rem;
   }
 
